# icu_conformal_treatment

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: project_paths.yaml
docs/: experimental_results_overview.md  method_sketch.md  mimic_v3_experiment_design.md  paper_outline.md  regret_theorem_outline.md  synthetic_design_notes.md
paper/: abstract.md  discussion.md  introduction.md  main.tex  methods.md  results.md
results/: mimic_v3_alpha_sweep_logreg.csv  mimic_v3_alpha_sweep_xgboost.csv  mimic_v3_subgroup_age_alpha0.2.csv  mimic_v3_subgroup_careunit_alpha0.2.csv  mimic_v3_subgroup_gender_alpha0.2.csv  mimic_v3_subgroup_global_alpha0.2.csv  results_summary.md  synth_binary_alpha_sweep_logreg.csv  synth_binary_alpha_sweep_xgboost.csv  synth_continuous_alpha_sweep_logreg.csv
scripts/: create_causal_dataset.py  create_mimic_v3_causal_dataset.py  create_simple_dataset.py  export_results_for_paper.py  extract_mimic_demo_cohort.py  extract_mimic_v3_cohort.py  plot_mimic_v3_policy_curves.py  run_baseline_logreg.py  run_causal_tlearner_logreg.py  run_conformal_policy.py  run_conformal_policy_modular.py  run_conformal_policy_modular_nll.py  run_conformal_policy_xgboost.py  run_conformal_potential_outcomes.py  run_full_demo_experiment.py  run_mimic_v3_careunit_policy_analysis.py  run_mimic_v3_conformal_policy_alpha_sweep.py  run_mimic_v3_conformal_policy_alpha_sweep_xgboost.py  run_mimic_v3_subgroup_policy_analysis.py  run_mimic_v3_tlearner_logreg.py  run_synth_continuous_alpha_sweep.py  run_synthetic_alpha_sweep.py  (+5 more)
(+9 files in other folders)
