[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "icu_conformal_treatment"
version = "0.0.1"
description = "Regret-bounded individualized ICU treatment using conformal counterfactual inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
